--- a/TemposonicSSICommunication/library.properties
+++ b/TemposonicSSICommunication/library.properties
@@ -1,7 +1,7 @@
 name=Temposonic SSI Communication
 version=0.1
-author=Logan Scholz (logans@ping.com)
-maintainer=Logan Scholz (logans@ping.com)
+author=Logan Scholz (logans@321654987452132.com)
+maintainer=Logan Scholz (logans@321654987452132.com)
 sentence=Arduino library for Temposonic Synchronous Serial Interface
 paragraph=Temposonic LVDT communicator using SSI (synchronous serial interface)
 category=Communication
