--- a/TemposonicSSICommunication/library.properties
+++ b/TemposonicSSICommunication/library.properties
@@ -1,7 +1,7 @@
 name=Temposonic SSI Communication
-version=0.1
-author=Logan Scholz (logans@ping.com)
-maintainer=Logan Scholz (logans@ping.com)
+version=0.2
+author=Logan Scholz
+maintainer=Logan Scholz
 sentence=Arduino library for Temposonic Synchronous Serial Interface
 paragraph=Temposonic LVDT communicator using SSI (synchronous serial interface)
 category=Communication
